# internal/docs/swagger.yaml
@@ -1,3 +1,125 @@
+definitions:
+  request.UserLogin:
+    properties:
+      loginType:
+        description: 手机验证码或账号密码
+        example: 登录类型 必填,phone/account
+        type: string
+      password:
+        description: 账户密码登录, 密码
+        example: 密码
+        type: string
+      phone:
+        description: 手机号验证码登录, 手机号码
+        example: 手机号
+        type: string
+      phoneCode:
+        description: 手机验证码登录, 验证码
+        example: 手机验证码
+        type: string
+      username:
+        description: 账户密码登录, 用户名, 用户名支持手机号密码登录
+        example: 用户名
+        type: string
+    required:
+    - loginType
+    type: object
+  request.UserRegister:
+    properties:
+      headerImg:
+        example: 头像链接
+        type: string
+      nickName:
+        example: 昵称
+        type: string
+      passWord:
+        example: 密码
+        type: string
+      phone:
+        example: 电话号码, 必填
+        type: string
+      phoneCode:
+        description: 手机验证码登录, 验证码
+        example: 手机号验证码
+        type: string
+      username:
+        example: 用户名
+        type: string
+    required:
+    - passWord
+    - phone
+    - phoneCode
+    - username
+    type: object
+  response.Response:
+    properties:
+      code:
+        type: integer
+      data: {}
+      msg:
+        type: string
+    type: object
+  response.UserInfoResponse:
+    properties:
+      user:
+        $ref: '#/definitions/system.User'
+    type: object
+  response.UserLoginResponse:
+    properties:
+      token:
+        type: string
+      user:
+        $ref: '#/definitions/system.User'
+    type: object
+  system.User:
+    properties:
+      allVolume:
+        type: integer
+      city:
+        type: string
+      country:
+        type: string
+      createdAt:
+        type: string
+      displayAllVolume:
+        type: string
+      displayUsedVolume:
+        type: string
+      email:
+        type: string
+      enableAiPhotoFace:
+        type: boolean
+      enableAiPhotoLabel:
+        type: boolean
+      headerImg:
+        type: string
+      id:
+        type: integer
+      loginAt:
+        type: integer
+      nickName:
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+      province:
+        type: string
+      registerType:
+        type: string
+      sex:
+        type: integer
+      updatedAt:
+        type: string
+      usedVolume:
+        type: integer
+      usedVolumePercent:
+        type: number
+      userUID:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -12,4 +134,138 @@ paths:
       summary: 心跳检测
       tags:
       - basic
+  /sms:
+    get:
+      description: 短信验证码
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 发送短信验证码
+      tags:
+      - 基本模块
+  /user/info:
+    get:
+      consumes:
+      - application/json
+      description: 获取用户信息
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  $ref: '#/definitions/response.UserInfoResponse'
+                msg:
+                  type: string
+              type: object
+      summary: 获取用户信息
+      tags:
+      - 用户模块
+  /user/login:
+    post:
+      description: 用户登录, 账号密码登录, 手机验证码注册登录
+      parameters:
+      - description: 登录类型, 用户名, 密码, 手机号, 验证码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.UserLogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回包括用户信息,token,过期时间
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  $ref: '#/definitions/response.UserLoginResponse'
+                msg:
+                  type: string
+              type: object
+      summary: 用户登录
+      tags:
+      - 用户模块
+  /user/logoff:
+    delete:
+      consumes:
+      - application/json
+      description: 注销
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                code:
+                  type: integer
+                msg:
+                  type: string
+              type: object
+      summary: 用户注销
+      tags:
+      - 用户模块
+  /user/logout:
+    delete:
+      consumes:
+      - application/json
+      description: 退出登录
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                code:
+                  type: integer
+                msg:
+                  type: string
+              type: object
+      summary: 用户退出登录
+      tags:
+      - 用户模块
+  /user/register:
+    post:
+      parameters:
+      - description: 注册信息
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.UserRegister'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                code:
+                  type: integer
+                msg:
+                  type: string
+              type: object
+      summary: 用户注册
+      tags:
+      - 用户模块
 swagger: "2.0"
