# internal/global/model.go
@@ -1,0 +1,10 @@
+package global
+
+import "time"
+
+type Model struct {
+	ID        uint `json:"id" gorm:"primarykey" `
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	DeletedAt *time.Time `json:"-" gorm:"index"`
+}
